# rust_actix_experiment

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
