[package]
name = "todos"
version = "0.1.0"
authors = ["Stefano Soro <stefanowolfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "3"
futures = "0.3.5"
serde = "1.0.116"
serde_json = "1.0.57"
